--- a/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-lambda-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-24 02:26+0000\n"
+"POT-Creation-Date: 2022-03-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,12 +22,12 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:6
 #, no-wrap
-msgid "Amazon Lambda with RESTEasy, Undertow, or Reactive Routes"
+msgid "Amazon Lambda with RESTEasy Reactive, Undertow, or Reactive Routes"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:15
-msgid "With Quarkus you can deploy your favorite Java HTTP frameworks as Amazon Lambda's using either the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html[AWS Gateway HTTP API] or https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-rest-api.html[AWS Gateway REST API].  This means that you can deploy your microservices written with RESTEasy (JAX-RS), Undertow (servlet), Reactive Routes, xref:funqy-http.adoc[Funqy HTTP] or any other Quarkus HTTP framework as an AWS Lambda."
+msgid "With Quarkus you can deploy your favorite Java HTTP frameworks as Amazon Lambda's using either the https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html[AWS Gateway HTTP API] or https://docs.aws.amazon.com/apigateway/latest/developerguide/apigateway-rest-api.html[AWS Gateway REST API].  This means that you can deploy your microservices written with RESTEasy Reactive (JAX-RS), Undertow (servlet), Reactive Routes, xref:funqy-http.adoc[Funqy HTTP] or any other Quarkus HTTP framework as an AWS Lambda."
 msgstr ""
 
 #. type: Plain text
@@ -407,7 +407,7 @@ msgstr "POM には `quarkus-amazon-lambda-http` エクステンション(AWS Gat
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:243
-msgid "Also, at least in the generated Maven archetype `pom.xml`, the `quarkus-resteasy`, `quarkus-reactive-routes`, and `quarkus-undertow` dependencies are all optional.  Pick which HTTP framework(s) you want to use (JAX-RS, Reactive Routes, and/or Servlet) and remove the other dependencies to shrink your deployment."
+msgid "Also, at least in the generated Maven archetype `pom.xml`, the `quarkus-resteasy-reactive`, `quarkus-reactive-routes`, and `quarkus-undertow` dependencies are all optional.  Pick which HTTP framework(s) you want to use (JAX-RS, Reactive Routes, and/or Servlet) and remove the other dependencies to shrink your deployment."
 msgstr ""
 
 #. type: Title ===
@@ -483,7 +483,7 @@ msgstr "注入可能なAWSコンテキスト変数"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/amazon-lambda-http.adoc:291
-msgid "If you are using RESTEasy and JAX-RS, you can inject various AWS Context variables into your JAX-RS resource classes using the JAX-RS `@Context` annotation or anywhere else with the CDI `@Inject` annotation."
+msgid "If you are using RESTEasy Reactive and JAX-RS, you can inject various AWS Context variables into your JAX-RS resource classes using the JAX-RS `@Context` annotation or anywhere else with the CDI `@Inject` annotation."
 msgstr ""
 
 #. type: Plain text
