--- a/l10n/po/ja_JP/_versions/main/guides/blaze-persistence.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/blaze-persistence.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -397,7 +397,7 @@ msgid ""
 "    @GET\n"
 "    @Path(\"{id\"})\n"
 "    @Produces(MediaType.APPLICATION_JSON)\n"
-"    public GiftView getGift(@PathParam(\"id\") Long id) {\n"
+"    public GiftView getGift(Long id) {\n"
 "        return return entityViewManager.find(entityManager, GiftView.class, view.getId());\n"
 "    }\n"
 "}\n"
