--- a/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/gradle-tooling.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-09 02:30+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -48,7 +48,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "quarkus create app my-groupId:my-artifactId \\\n"
-"    --extension=resteasy,resteasy-jackson \\\n"
+"    --extension=resteasy-reactive,resteasy-reactive-jackson \\\n"
 "    --gradle\n"
 msgstr ""
 
@@ -70,7 +70,7 @@ msgid ""
 "mvn io.quarkus.platform:quarkus-maven-plugin:{quarkus-version}:create \\\n"
 "    -DprojectGroupId=my-groupId \\\n"
 "    -DprojectArtifactId=my-artifactId \\\n"
-"    -Dextensions=\"resteasy,resteasy-jackson\" \\\n"
+"    -Dextensions=\"resteasy-reactive,resteasy-reactive-jackson\" \\\n"
 "    -DbuildTool=gradle\n"
 msgstr ""
 
