--- a/l10n/po/ja_JP/_versions/main/guides/kogito-dmn.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kogito-dmn.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-02 02:15+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -157,7 +157,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_versions/main/guides/kogito-dmn.adoc:77
-msgid "This command generates a Maven project, importing the `kogito-quarkus-decisions` extension that comes with all needed dependencies and configuration to equip your application with business automation.  It also imports the `resteasy-jackson` extension that is needed for Kogito to expose REST services."
+msgid "This command generates a Maven project, importing the `kogito-quarkus-decisions` extension that comes with all needed dependencies and configuration to equip your application with business automation.  It also imports the `resteasy-reactive-jackson` extension that is needed for Kogito to expose REST services."
 msgstr ""
 
 #. type: Plain text
