--- a/l10n/po/ja_JP/_versions/main/guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/optaplanner.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-08 02:20+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -127,12 +127,12 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/optaplanner.adoc:59
-msgid "RESTEasy JAX-RS (`quarkus-resteasy`)"
+msgid "RESTEasy Reactive (`quarkus-resteasy-reactive`)"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/optaplanner.adoc:60
-msgid "RESTEasy Jackson (`quarkus-resteasy-jackson`)"
+msgid "RESTEasy Reactive Jackson (`quarkus-resteasy-reactive-jackson`)"
 msgstr ""
 
 #. type: Plain text
@@ -187,11 +187,11 @@ msgid ""
 "<dependencies>\n"
 "    <dependency>\n"
 "        <groupId>io.quarkus</groupId>\n"
-"        <artifactId>quarkus-resteasy</artifactId>\n"
+"        <artifactId>quarkus-resteasy-reactive</artifactId>\n"
 "    </dependency>\n"
 "    <dependency>\n"
 "        <groupId>io.quarkus</groupId>\n"
-"        <artifactId>quarkus-resteasy-jackson</artifactId>\n"
+"        <artifactId>quarkus-resteasy-reactive-jackson</artifactId>\n"
 "    </dependency>\n"
 "    <dependency>\n"
 "        <groupId>org.optaplanner</groupId>\n"
@@ -229,8 +229,8 @@ msgid ""
 "dependencies {\n"
 "    implementation enforcedPlatform(\"io.quarkus.platform:quarkus-bom:{quarkus-version}\")\n"
 "    implementation enforcedPlatform(\"io.quarkus.platform:quarkus-optaplanner-bom:{quarkus-version}\")\n"
-"    implementation 'io.quarkus:quarkus-resteasy'\n"
-"    implementation 'io.quarkus:quarkus-resteasy-jackson'\n"
+"    implementation 'io.quarkus:quarkus-resteasy-reactive'\n"
+"    implementation 'io.quarkus:quarkus-resteasy-reactive-jackson'\n"
 "    implementation 'org.optaplanner:optaplanner-quarkus'\n"
 "    implementation 'org.optaplanner:optaplanner-quarkus-jackson'\n"
 msgstr ""
