--- a/l10n/po/ja_JP/_versions/main/guides/reactive-routes.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/reactive-routes.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-08 02:20+0000\n"
+"POT-Creation-Date: 2022-03-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1228,7 +1228,7 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/reactive-routes.adoc:648
-msgid "`Router` access is provided by the `quarkus-vertx-http` extension.  If you use `quarkus-resteasy` or `quarkus-reactive-routes`, the extension will be added automatically."
+msgid "`Router` access is provided by the `quarkus-vertx-http` extension.  If you use `quarkus-resteasy-reactive` or `quarkus-reactive-routes`, the extension will be added automatically."
 msgstr ""
 
 #. type: Plain text
