--- a/l10n/po/ja_JP/_versions/main/guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/scheduler.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-08 02:20+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -114,7 +114,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/scheduler.adoc:50
 #, fuzzy
-msgid "The project also imports the RESTEasy and scheduler extensions."
+msgid "The project also imports the RESTEasy Reactive and scheduler extensions."
 msgstr "Maven プロジェクトは、Quarkus scheduler エクステンションもインポートします。"
 
 #. type: Plain text
