--- a/l10n/po/ja_JP/_versions/main/guides/spring-cache.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-cache.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-03-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -269,7 +269,7 @@ msgstr ""
 #. type: delimited block -
 #: upstream/_versions/main/guides/spring-cache.adoc:140
 #, no-wrap
-msgid "import org.jboss.resteasy.annotations.jaxrs.QueryParam;\n"
+msgid "import org.jboss.resteasy.reactive.RestQuery;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -293,7 +293,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "    @GET\n"
-"    public WeatherForecast getForecast(@QueryParam String city, @QueryParam long daysInFuture) { // <1>\n"
+"    public WeatherForecast getForecast(@RestQuery String city, @RestQuery long daysInFuture) { // <1>\n"
 "        long executionStart = System.currentTimeMillis();\n"
 "        List<String> dailyForecasts = Arrays.asList(\n"
 "                service.getDailyForecast(LocalDate.now().plusDays(daysInFuture), city),\n"
