--- a/l10n/po/ja_JP/_versions/main/guides/spring-scheduled.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/spring-scheduled.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -80,7 +80,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_versions/main/guides/spring-scheduled.adoc:37
-msgid "This command generates a Maven project with a REST endpoint and adds the `spring-scheduled` extension."
+msgid "This command generates a Maven project with the `spring-scheduled` extension."
 msgstr ""
 
 #. type: Plain text
