--- a/l10n/po/ja_JP/_versions/main/guides/stork.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/stork.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-18 02:33+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -588,8 +588,8 @@ msgstr ""
 #, no-wrap
 msgid ""
 "quarkus.stork.my-service.service-discovery.type=consul\n"
-"quarkus.stork.my-service.service-discovery.params.consul-host=localhost\n"
-"quarkus.stork.my-service.service-discovery.params.consul-port=8500\n"
+"quarkus.stork.my-service.service-discovery.consul-host=localhost\n"
+"quarkus.stork.my-service.service-discovery.consul-port=8500\n"
 "quarkus.stork.my-service.load-balancer.type=round-robin\n"
 msgstr ""
 
@@ -600,7 +600,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/stork.adoc:324
-msgid "The other properties are related to Stork.  `stork.my-service.service-discovery` indicates which type of service discovery we will be using to locate the `my-service` service.  In our case, it's `consul`.  `quarkus.stork.my-service.service-discovery.params.consul-host` and `quarkus.stork.my-service.service-discovery.params.consul-port` configures the access to Consul.  Finally, `quarkus.stork.my-service.load-balancer.type` configures the service selection.  In our case, we use a `round-robin`."
+msgid "The other properties are related to Stork.  `stork.my-service.service-discovery` indicates which type of service discovery we will be using to locate the `my-service` service.  In our case, it's `consul`.  `quarkus.stork.my-service.service-discovery.consul-host` and `quarkus.stork.my-service.service-discovery.consul-port` configures the access to Consul.  Finally, `quarkus.stork.my-service.load-balancer.type` configures the service selection.  In our case, we use a `round-robin`."
 msgstr ""
 
 #. type: Title ==
