--- a/l10n/po/ja_JP/_versions/main/guides/tests-with-coverage.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/tests-with-coverage.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -586,7 +586,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/tests-with-coverage.adoc:353
-msgid "Sharing the same value for `quarkus.test.arg-line` might break integration test runs that test different types of Quarkus artifacts. In such cases, the use of maven profiles is advised."
+#, fuzzy
+#| msgid "Sharing the same value for `quarkus.test.arg-line` might break integration test runs that test different types of Quarkus artifacts. In such cases, the use of maven profiles is advised."
+msgid "Sharing the same value for `quarkus.test.arg-line` might break integration test runs that test different types of Quarkus artifacts. In such cases, the use of Maven profiles is advised."
 msgstr "`quarkus.test.arg-line` で同じ値を共有すると、異なるタイプのQuarkusアーティファクトをテストする結合テストが壊れる可能性があります。このような場合には、mavenプロファイルの使用をお勧めします。"
 
 #. type: Title ==
