--- a/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/writing-extensions.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-04 02:33+0000\n"
+"POT-Creation-Date: 2022-03-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -4367,7 +4367,7 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/writing-extensions.adoc:2253
-msgid "The feature name should also map to a label in the extension's `devtools/common/src/main/filtered/extensions.json` entry so that the feature name displayed by the startup line matches a label that one can used to select the extension when creating a project using the Quarkus maven plugin as shown in this example taken from the xref:rest-json.adoc[Writing JSON REST Services] guide where the `resteasy-jackson` feature is referenced:"
+msgid "The feature name should also map to a label in the extension's `devtools/common/src/main/filtered/extensions.json` entry so that the feature name displayed by the startup line matches a label that one can used to select the extension when creating a project using the Quarkus maven plugin as shown in this example taken from the xref:rest-json.adoc[Writing JSON REST Services] guide where the `resteasy-reactive-jackson` feature is referenced:"
 msgstr ""
 
 #. type: delimited block -
@@ -4379,7 +4379,7 @@ msgid ""
 "    -DprojectArtifactId=rest-json \\\n"
 "    -DclassName=\"org.acme.rest.json.FruitResource\" \\\n"
 "    -Dpath=\"/fruits\" \\\n"
-"    -Dextensions=\"resteasy,resteasy-jackson\"\n"
+"    -Dextensions=\"resteasy-reactive,resteasy-reactive-jackson\"\n"
 "cd rest-json\n"
 msgstr ""
 
