--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-stork-stork-load-balancer-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-stork-stork-load-balancer-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-18 02:32+0000\n"
+"POT-Creation-Date: 2022-03-19 02:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -67,7 +67,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-stork-stork-load-balancer-configuration.adoc:25
 #, no-wrap
 msgid ""
-"[[quarkus-stork-stork-load-balancer-configuration_quarkus.stork.-service-name-.load-balancer.parameters-parameters]]`link:#quarkus-stork-stork-load-balancer-configuration_quarkus.stork.-service-name-.load-balancer.parameters-parameters[quarkus.stork.\"service-name\".load-balancer.parameters]`\n"
+"[[quarkus-stork-stork-load-balancer-configuration_quarkus.stork.-service-name-.load-balancer-parameters]]`link:#quarkus-stork-stork-load-balancer-configuration_quarkus.stork.-service-name-.load-balancer-parameters[quarkus.stork.\"service-name\".load-balancer]`\n"
 "\n"
 "[.description]\n"
 "--\n"
