--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-stork-stork-service-discovery-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-stork-stork-service-discovery-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-03-18 02:31+0000\n"
+"POT-Creation-Date: 2022-03-19 02:26+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -67,7 +67,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-stork-stork-service-discovery-configuration.adoc:25
 #, no-wrap
 msgid ""
-"[[quarkus-stork-stork-service-discovery-configuration_quarkus.stork.-service-name-.service-discovery.params-params]]`link:#quarkus-stork-stork-service-discovery-configuration_quarkus.stork.-service-name-.service-discovery.params-params[quarkus.stork.\"service-name\".service-discovery.params]`\n"
+"[[quarkus-stork-stork-service-discovery-configuration_quarkus.stork.-service-name-.service-discovery-params]]`link:#quarkus-stork-stork-service-discovery-configuration_quarkus.stork.-service-name-.service-discovery-params[quarkus.stork.\"service-name\".service-discovery]`\n"
 "\n"
 "[.description]\n"
 "--\n"
