--- a/l10n/po/ja_JP/_versions/main/guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/azure-functions-http.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-03-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,12 +22,12 @@ msgstr ""
 #. type: Title =
 #: upstream/_versions/main/guides/azure-functions-http.adoc:6
 #, no-wrap
-msgid "Azure Functions (Serverless) with RESTEasy, Undertow, or Reactive Routes"
+msgid "Azure Functions (Serverless) with RESTEasy Reactive, Undertow, or Reactive Routes"
 msgstr ""
 
 #. type: Plain text
 #: upstream/_versions/main/guides/azure-functions-http.adoc:13
-msgid "The `quarkus-azure-functions-http` extension allows you to write microservices with RESTEasy (JAX-RS), Undertow (servlet), Reactive Routes, or xref:funqy-http.adoc[Funqy HTTP] and make these microservices deployable to the Azure Functions runtime."
+msgid "The `quarkus-azure-functions-http` extension allows you to write microservices with RESTEasy Reactive (JAX-RS), Undertow (servlet), Reactive Routes, or xref:funqy-http.adoc[Funqy HTTP] and make these microservices deployable to the Azure Functions runtime."
 msgstr ""
 
 #. type: Plain text
@@ -211,7 +211,7 @@ msgstr "エクステンションのmaven依存関係"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/azure-functions-http.adoc:101
-msgid "The sample project includes the RESTEasy, Undertow, Reactive Routes, xref:funqy-http.adoc[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-reactive-routes`."
+msgid "The sample project includes the RESTEasy Reactive, Undertow, Reactive Routes, xref:funqy-http.adoc[Funqy HTTP] extensions.  If you are only using one of those APIs (i.e. jax-rs only), respectively remove the maven dependency `quarkus-resteasy-reactive`, `quarkus-undertow`, `quarkus-funqy-http`, and/or `quarkus-reactive-routes`."
 msgstr ""
 
 #. type: Plain text
