--- a/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/elasticsearch.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-24 02:26+0000\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -85,7 +85,7 @@ msgstr "まず、新しいプロジェクトが必要です。以下のコマン
 
 #. type: Plain text
 #: upstream/_versions/main/guides/elasticsearch.adoc:39
-msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Jackson, and the Elasticsearch low level client extensions.  After this, the `quarkus-elasticsearch-rest-client` extension has been added to your build file."
+msgid "This command generates a Maven structure importing the RESTEasy Reactive/JAX-RS, Jackson, and the Elasticsearch low level client extensions.  After this, the `quarkus-elasticsearch-rest-client` extension has been added to your build file."
 msgstr ""
 
 #. type: Plain text
@@ -95,7 +95,9 @@ msgstr "代わりに高レベルクライアントを使いたい場合は、 `e
 
 #. type: delimited block =
 #: upstream/_versions/main/guides/elasticsearch.adoc:46
-msgid "We use the `resteasy-jackson` extension here and not the JSON-B variant because we will use the Vert.x `JsonObject` helper to serialize/deserialize our objects to/from Elasticsearch and it uses Jackson under the hood."
+#, fuzzy
+#| msgid "We use the `resteasy-jackson` extension here and not the JSON-B variant because we will use the Vert.x `JsonObject` helper to serialize/deserialize our objects to/from Elasticsearch and it uses Jackson under the hood."
+msgid "We use the `resteasy-reactive-jackson` extension here and not the JSON-B variant because we will use the Vert.x `JsonObject` helper to serialize/deserialize our objects to/from Elasticsearch and it uses Jackson under the hood."
 msgstr "ここでは JSON-B などではなく `resteasy-jackson` エクステンションを使用しています。これは Vert.x `JsonObject` ヘルパーを使用して Elasticsearch との間でオブジェクトをシリアライズ/デシリアライズし、Jackson を使用するからです。"
 
 #. type: Plain text
@@ -372,19 +374,32 @@ msgid "Now, create the `org.acme.elasticsearch.FruitResource` class as follows:"
 msgstr ""
 
 #. type: delimited block -
-#: upstream/_versions/main/guides/elasticsearch.adoc:205
-#, no-wrap
+#: upstream/_versions/main/guides/elasticsearch.adoc:203
+#, fuzzy, no-wrap
+#| msgid ""
+#| "import javax.ws.rs.GET;\n"
+#| "import javax.ws.rs.Path;\n"
+#| "import javax.ws.rs.Produces;\n"
+#| "import javax.ws.rs.core.MediaType;\n"
 msgid ""
 "import javax.inject.Inject;\n"
 "import javax.ws.rs.GET;\n"
 "import javax.ws.rs.POST;\n"
 "import javax.ws.rs.Path;\n"
-"import javax.ws.rs.PathParam;\n"
-"import javax.ws.rs.QueryParam;\n"
 "import java.io.IOException;\n"
 "import java.net.URI;\n"
 "import java.util.List;\n"
 "import java.util.UUID;\n"
+msgstr ""
+"import javax.ws.rs.GET;\n"
+"import javax.ws.rs.Path;\n"
+"import javax.ws.rs.Produces;\n"
+"import javax.ws.rs.core.MediaType;\n"
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/elasticsearch.adoc:205
+#, no-wrap
+msgid "import org.jboss.resteasy.reactive.RestQuery;\n"
 msgstr ""
 
 #. type: delimited block -
@@ -425,7 +440,7 @@ msgstr ""
 msgid ""
 "    @GET\n"
 "    @Path(\"/{id}\")\n"
-"    public Fruit get(@PathParam(\"id\") String id) throws IOException {\n"
+"    public Fruit get(String id) throws IOException {\n"
 "        return fruitService.get(id);\n"
 "    }\n"
 msgstr ""
@@ -436,7 +451,7 @@ msgstr ""
 msgid ""
 "    @GET\n"
 "    @Path(\"/search\")\n"
-"    public List<Fruit> search(@QueryParam(\"name\") String name, @QueryParam(\"color\") String color) throws IOException {\n"
+"    public List<Fruit> search(@RestQuery String name, @RestQuery String color) throws IOException {\n"
 "        if (name != null) {\n"
 "            return fruitService.searchByName(name);\n"
 "        } else if (color != null) {\n"
@@ -908,17 +923,6 @@ msgstr "設定リファレンス"
 
 #~ msgid "The solution for the high level client is located in the `elasticsearch-rest-high-level-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-high-level-client-quickstart[directory]."
 #~ msgstr "高レベルクライアントのソリューションは `elasticsearch-rest-high-level-client-quickstart` {quickstarts-tree-url}/elasticsearch-rest-high-level-client-quickstart[ディレクトリ] にあります。"
-
-#~ msgid ""
-#~ "import javax.ws.rs.GET;\n"
-#~ "import javax.ws.rs.Path;\n"
-#~ "import javax.ws.rs.Produces;\n"
-#~ "import javax.ws.rs.core.MediaType;\n"
-#~ msgstr ""
-#~ "import javax.ws.rs.GET;\n"
-#~ "import javax.ws.rs.Path;\n"
-#~ "import javax.ws.rs.Produces;\n"
-#~ "import javax.ws.rs.core.MediaType;\n"
 
 #~ msgid "Creating a frontend"
 #~ msgstr "フロントエンドの作成"
