--- a/l10n/po/ja_JP/_versions/main/guides/kubernetes-client.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/kubernetes-client.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-04 01:49+0900\n"
+"POT-Creation-Date: 2022-03-19 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -190,7 +190,7 @@ msgstr ""
 msgid ""
 "    @GET\n"
 "    @Path(\"/{namespace}\")\n"
-"    public List<Pod> pods(@PathParam(\"namespace\") String namespace) {\n"
+"    public List<Pod> pods(String namespace) {\n"
 "        return kubernetesClient.pods().inNamespace(namespace).list().getItems();\n"
 "    }\n"
 "}\n"
