--- a/l10n/po/ja_JP/_versions/main/guides/performance-measure.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/performance-measure.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2022-02-19 02:23+0000\n"
+"POT-Creation-Date: 2022-03-19 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -429,7 +429,7 @@ msgid ""
 "10:57:32.508\n"
 "10:57:32.512\n"
 "2019-04-05 10:57:32,512 INFO  [io.quarkus] (main) Quarkus 0.11.0 started in 0.002s. Listening on: http://127.0.0.1:8080\n"
-"2019-04-05 10:57:32,512 INFO  [io.quarkus] (main) Installed features: [cdi, resteasy, resteasy-jackson]\n"
+"2019-04-05 10:57:32,512 INFO  [io.quarkus] (main) Installed features: [cdi, resteasy-reactive, resteasy-reactive-jackson]\n"
 "10:57:32.537\n"
 msgstr ""
 
