Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/resteasy-reactive.adoc.po
@@ -2306,7 +2306,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1145
 msgid "link:https://en.wikipedia.org/wiki/Cross-origin_resource_sharing[Cross-origin resource sharing] (CORS) is a mechanism that allows restricted resources on a web page to be requested from another domain outside the domain from which the first resource was served."
-msgstr ""
+msgstr "link:https://en.wikipedia.org/wiki/Cross-origin_resource_sharing[クロスオリジンリソース共有] (CORS)は、ウェブページ上の制限されたリソースを、最初のリソースが提供されたドメイン以外の別のドメインから要求できるようにするメカニズムです。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1149
@@ -2938,12 +2938,12 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1524
 msgid "Both HTTP request and response can be intercepted by providing `ContainerRequestFilter` or `ContainerResponseFilter` implementations respectively. These filters are suitable for processing the metadata associated with a message: HTTP headers, query parameters, media type, and other metadata. They also have the capability to abort the request processing, for instance when the user does not have the permissions to access the endpoint."
-msgstr ""
+msgstr "HTTP リクエストとレスポンスの両方とも、それぞれ `ContainerRequestFilter` または `ContainerResponseFilter` の実装を提供することで、 インターセプトすることができます。これらのフィルタは、メッセージに関連付けられたメタデータを処理するのに適しています。HTTP ヘッダ、クエリパラメーター、メディアタイプ、その他のメタデータです。また、ユーザーがエンドポイントにアクセスする権限を持っていない場合など、リクエスト処理を中止する機能も持っています。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1527
 msgid "Let's use `ContainerRequestFilter` to add logging capability to our service. We can do that by implementing `ContainerRequestFilter` and annotating it with the `@Provider` annotation:"
-msgstr ""
+msgstr "`ContainerRequestFilter` を使用して、サービスにロギング機能を追加してみましょう。 `ContainerRequestFilter` を実装して、 `@Provider` アノテーションをつけることで実現できます。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1531
@@ -3038,7 +3038,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1565
 msgid "Now, whenever a REST method is invoked, the request will be logged into the console:"
-msgstr ""
+msgstr "これで、RESTメソッドが呼び出されるたびに、リクエストがコンソールにログとして記録されるようになりました。"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1572
@@ -3405,22 +3405,22 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1812
 msgid "For instance, if you declare a `WriterInterceptor`, it will by default intercept both the servers calls and the client calls, which might not be the desired behavior."
-msgstr ""
+msgstr "例えば、 `WriterInterceptor` を宣言した場合、デフォルトではサーバーの呼び出しとクライアントの呼び出しの両方をインターセプトしますが、これは望ましい動作ではないかもしれません。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1814
 msgid "However, you can change this default behavior and constrain a provider to:"
-msgstr ""
+msgstr "しかし、このデフォルトの動作を変更してプロバイダを制約することができます。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1816
 msgid "only consider *server* calls by adding the `@ConstrainedTo(RuntimeType.SERVER)` annotation to your provider;"
-msgstr ""
+msgstr "プロバイダに `@ConstrainedTo(RuntimeType.SERVER)` アノテーションを追加することで、 *サーバー* コールのみを考慮します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1817
 msgid "only consider *client* calls by adding the `@ConstrainedTo(RuntimeType.CLIENT)` annotation to your provider."
-msgstr ""
+msgstr "プロバイダに `@ConstrainedTo(RuntimeType.CLIENT)` アノテーションを追加することで、 *クライアント* コールのみを考慮します。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/resteasy-reactive.adoc:1818
