Update .po files

--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-25 02:36+0000\n"
+"POT-Creation-Date: 2022-03-22 02:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -69,7 +69,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:411
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:429
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:474
-#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:531
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:550
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -123,6 +123,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:504
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:513
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:522
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:531
 #, no-wrap
 msgid "int"
 msgstr "int"
@@ -149,6 +150,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:348
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:484
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:494
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:541
 #, no-wrap
 msgid ""
 "link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
@@ -304,7 +306,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:405
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:432
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:477
-#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:533
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:552
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -905,6 +907,42 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:530
 #, no-wrap
 msgid ""
+"[[quarkus-vertx-config-vertx-configuration_quarkus.vertx.resolver.max-queries]]`link:#quarkus-vertx-config-vertx-configuration_quarkus.vertx.resolver.max-queries[quarkus.vertx.resolver.max-queries]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The maximum number of queries to be sent during a resolution.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:534
+#, no-wrap
+msgid "`4`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:539
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-config-vertx-configuration_quarkus.vertx.resolver.query-timeout]]`link:#quarkus-vertx-config-vertx-configuration_quarkus.vertx.resolver.query-timeout[quarkus.vertx.resolver.query-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The duration after which a DNS query is considered to be failed.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:544
+#, no-wrap
+msgid "`5S`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:549
+#, no-wrap
+msgid ""
 "[[quarkus-vertx-config-vertx-configuration_quarkus.vertx.prefer-native-transport]]`link:#quarkus-vertx-config-vertx-configuration_quarkus.vertx.prefer-native-transport[quarkus.vertx.prefer-native-transport]`\n"
 "\n"
 "[.description]\n"
@@ -914,17 +952,17 @@ msgid ""
 msgstr ""
 
 #. type: Block title
-#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:537
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:556
 #, no-wrap
 msgid "About the Duration format"
 msgstr ""
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:541
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:560
 msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
 msgstr "期間のフォーマットは標準の `java.time.Duration` フォーマットを使用します。詳細は link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc] を参照してください。"
 
 #. type: delimited block =
-#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:545
+#: upstream/_generated-config/main/config/quarkus-vertx-config-vertx-configuration.adoc:564
 msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr "数値で始まる期間の値を指定することもできます。この場合、値が数値のみで構成されている場合、コンバーターは値を秒として扱います。そうでない場合は、 `PT` が暗黙的に値の前に付加され、標準の `java.time.Duration` 形式が得られます。"
