--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2022-03-22 02:35+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,6 +56,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:18
 #: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:27
 #: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:36
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:45
 #, no-wrap
 msgid "int"
 msgstr "int"
@@ -80,7 +81,7 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:30
-#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:38
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:39
 #, no-wrap
 msgid "`0`"
 msgstr ""
@@ -95,4 +96,64 @@ msgid ""
 "--\n"
 "The amount of time in seconds that an unsuccessful attempt to resolve an address will be cached.\n"
 "--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:44
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-core-config-group-config-address-resolver-configuration_quarkus.vertx.resolver.max-queries]]`link:#quarkus-vertx-core-config-group-config-address-resolver-configuration_quarkus.vertx.resolver.max-queries[quarkus.vertx.resolver.max-queries]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The maximum number of queries to be sent during a resolution.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:48
+#, no-wrap
+msgid "`4`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:53
+#, no-wrap
+msgid ""
+"[[quarkus-vertx-core-config-group-config-address-resolver-configuration_quarkus.vertx.resolver.query-timeout]]`link:#quarkus-vertx-core-config-group-config-address-resolver-configuration_quarkus.vertx.resolver.query-timeout[quarkus.vertx.resolver.query-timeout]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"The duration after which a DNS query is considered to be failed.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:55
+#, no-wrap
+msgid ""
+"link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]\n"
+"  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:57
+#, no-wrap
+msgid "`5S`"
+msgstr ""
+
+#. type: Block title
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:61
+#, no-wrap
+msgid "About the Duration format"
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:65
+msgid "The format for durations uses the standard `java.time.Duration` format.  You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc]."
+msgstr ""
+
+#. type: delimited block =
+#: upstream/_generated-config/main/config/quarkus-vertx-core-config-group-config-address-resolver-configuration.adoc:69
+msgid "You can also provide duration values starting with a number.  In this case, if the value consists only of a number, the converter treats the value as seconds.  Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format."
 msgstr ""
