--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc.po
@@ -31,13 +31,13 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc:9
 #, no-wrap
 msgid "Type"
-msgstr ""
+msgstr "タイプ"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc:11
 #, no-wrap
 msgid "Default"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc:16
@@ -66,7 +66,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc:116
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-kubernetes-config-group-security-context-config-se-linux-options.adoc:25
